--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <h2>TE AMO</h2>
         </div>
         <div id="greenday-box" class="view">
+            <h2>Green Day</h2>
+            <img src="images/gd.jpg">
             <div class="images-container" id="greenDayImages">
-                <h2>Green Day</h2>
             </div>
         </div>
     </body>
