Change snow gif

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             }else if(openIbira2017()){
                 audioIbira2017.play();
                 toggleOverlay({
-                    "background-image" : "url('images/snow.webp')"
+                    "background-image" : "url('images/snow.gif')",
+                    "opacity" : "0.5"
                 });
             }
         });
